<resources>
    <string name="app_name">Jishi1.5</string>
    <string name="nullplacehold" />
    <string name="countdownNum">跳过 3</string>
    <string name="skip">跳过</string>
    <string name="new_user">新用户</string>
    <string name="signin">登入</string>
    <string name="forget_pass">忘记密码</string>
    <string name="tip_password">请输入密码</string>
    <string name="tip_account">请输入账号</string>
    <string name="enroll">注册</string>
    <string name="tip_phone">请输入手机号</string>
    <string name="tip_password_repeat">请确认密码</string>
    <string name="tologin">马上登录</string>
    <string name="enroll_success_tip">注册成功！您的账号为：\n\n\n\n请妥善保管您的账号\n这将是你登录的唯一凭证</string>
    <string name="account_security">账号安全</string>
    <string name="account_manager">账号管理</string>
    <string name="privileged">特权</string>
    <string name="msg_notice">消息通知</string>
    <string name="privacy">隐私</string>
    <string name="common">通用</string>
    <string name="auxiliary_fuction">辅助功能</string>
    <string name="support_help">关于与帮助</string>
    <string name="exit">退 出 登 录</string>

    <string-array name="main_menu">
        <item>实时通知</item>
        <item>学我所爱</item>
        <item>交流社区</item>
        <item>游山玩水</item>
        <item>二手闲置</item>
        <item>商铺推荐</item>
        <item>文娱活动</item>
        <item>拼车出行</item>
    </string-array>
</resources>
