<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity"
    android:background="@mipmap/login_bg1">

    <EditText
        android:id="@+id/edt_accountid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="225dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="number"
        android:hint="@string/tip_account"
        android:gravity="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edt_lpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_accountid"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:inputType="textPassword"
        android:hint="@string/tip_password"
        android:gravity="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/seagreen"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_lpassword"
        android:layout_marginTop="50dp"
        android:text="@string/signin"
        android:textSize="20sp"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_forget_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0e000000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        android:layout_marginTop="20dp"
        android:text="@string/forget_pass"
        android:textSize="20sp" />

</android.support.constraint.ConstraintLayout>