<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.EnrollActivity"
    android:background="@mipmap/login_bg1">

    <EditText
        android:id="@+id/edt_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="225dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="phone"
        android:hint="@string/tip_phone"
        android:textSize="20sp"
        android:gravity="center"
        android:visibility="visible" />

    <EditText
        android:id="@+id/edt_spassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_phone"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="textPassword"
        android:hint="@string/tip_password"
        android:gravity="center"
        android:textSize="20sp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/edt_spassword_r"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_spassword"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="textPassword"
        android:hint="@string/tip_password_repeat"
        android:gravity="center"
        android:textSize="20sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/btn_enroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightslategrey"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_spassword_r"
        android:layout_marginTop="50dp"
        android:text="@string/enroll"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/imv_enrollsuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/enroll_success"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txv_enroll_success_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imv_enrollsuccess"
        android:layout_marginTop="35dp"
        android:text="@string/enroll_success_tip"
        android:textSize="23sp"
        android:lineHeight="40dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txv_accountIdShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imv_enrollsuccess"
        android:layout_marginTop="80dp"
        tools:text="10001"
        android:textColor="@color/gold"
        android:textSize="32sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_tologin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/seagreen"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="170dp"
        android:text="@string/tologin"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="gone"
        android:enabled="false" />

</android.support.constraint.ConstraintLayout>